--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 * linguist-vendored
 *.js linguist-vendored=false
+src/main/resources/static/* linguist-vendored
+project-docs/* linguist-documentation
 *.rb linguist-language=Java
