--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,1 @@
-src/main/resources/static/* linguist-vendored
-project-docs/* linguist-documentation
-*.rb linguist-language=Java
+jc_ansiterm_0.1/* linguist-vendored=true
